Fixes bug: Shift time format issue

--- a/Sub.xcodeproj/xcshareddata/xcschemes/SRT.xcscheme
+++ b/Sub.xcodeproj/xcshareddata/xcschemes/SRT.xcscheme
@@ -59,6 +59,20 @@
             ReferencedContainer = "container:Sub.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Users/fan/Desktop/eng_bk.srt"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Users/fan/Desktop/o.txt"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "&quot;00:08:23,049 --&gt; 00:08:20,640&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
